iconsdir = $(datadir)/gtkhtml-@GTKHTML_API_VERSION@/icons
icons_DATA = \
	bulb.png			\
	info_bulb.png			\
	empty_image.png			\
	flowers.png			\
	html-viewer.png			\
	rule-blue-left.png		\
	rule-blue-center.png		\
	rule-blue-right.png		\
	rule-yellow-flowers-left.png	\
	rule-yellow-flowers-center.png	\
	rule-yellow-flowers-right.png	\
	transparent.png			\
	paper.png			\
	ribbon.jpg			\
	midnight-stars.jpg		\
	confidential-stamp.jpg		\
	draft-stamp.jpg			\
	draft-paper.png			\
	rect.png			\
	texture.png

EXTRA_DIST = \
	$(icons_DATA)

-include $(top_srcdir)/git.mk
